test/elaboration/good/typeclass_declaration.mle
type bool = True | False
class Eq 'a { equal : 'a -> 'a -> bool }
class Eq 'a => Ord 'a { lt : 'a -> 'a -> bool }
let (main : int) = 0