test/elaboration/bad/typeclass_let_bound_and_overload.mle
let (h : int) = 42
class H 'a { h : 'a -> int }